--- a/FrontendProduits/produit_contrefait/pubspec.yaml
+++ b/FrontendProduits/produit_contrefait/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   intl: ^0.18.1
   qr_flutter: ^4.0.0
   http: ^1.2.1
+  mobile_scanner: ^3.5.5
 
 dev_dependencies:
   flutter_test:
