--- a/FrontendProduits/produit_contrefait/pubspec.yaml
+++ b/FrontendProduits/produit_contrefait/pubspec.yaml
@@ -16,10 +16,22 @@ dependencies:
   mobile_scanner: ^3.5.5
   flutter_animate: ^4.1.1+1
   google_fonts: ^6.2.0
-  camera: ^0.10.5+9
   permission_handler: ^11.3.1
-  image: ^4.1.7
-  zxing2: ^0.2.1
+  url_launcher: ^6.2.6
+  camera: ^0.10.0
+  camera_web: ^0.3.0
+  image_picker: ^1.0.0
+  image: ^4.0.0
+  zxing2: ^0.2.0
+  shared_preferences: ^2.0.0
+  path_provider: ^2.0.0
+  qr_code_tools: ^0.2.0
+  jwt_decoder: ^2.0.1
+  universal_html: ^2.2.4
+
+  flutter_web_plugins:
+    sdk: flutter
+  web: ^1.1.1
 
 dev_dependencies:
   flutter_test:
