--- a/FrontendProduits/produit_contrefait_mobile/pubspec.yaml
+++ b/FrontendProduits/produit_contrefait_mobile/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image: ^3.2.2
   zxing2: 0.2.4
   web: any
+  qr_code_scanner: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
